--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
   height: 100vh;
   background:linear-gradient(rgba(0, 0, 0, 0.45),rgba(0, 0, 0, 0.45)), url('assets/img/bg02.jpg') no-repeat center/cover;
 }
+
+.perso{
+  background: white;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+}
