--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,12 @@
   width: 100vw;
 }
 
-.Home, .PersonalPage{
+.Home, .PersonalPage, .CreateRecette{
   height: 100vh;
   background:linear-gradient(rgba(0, 0, 0, 0.45),rgba(0, 0, 0, 0.45)), url('assets/img/bg02.jpg') no-repeat center/cover;
 }
 
-.perso{
+.perso, .CreateRecette-container{
   background: white;
   margin: 1rem;
   padding: 1rem;
